css/main.css
:root {
  --primary-bg1: hsl(31, 77%, 52%);
  --primary-bg2: hsl(184, 100%, 22%);
  --primary-bg3: hsl(179, 100%, 13%);
  --text: hsla(0, 0%, 100%, 0.75);
  --neutral-100: hsl(0, 0%, 95%);

  --ff-title: "Big Shoulders", sans-serif;
  --ff-text: "Lexend Deca", sans-serif;

  --fw-regular: 400;
  --fw-bold: 700;

  --fs-title: 2.25rem;
  --fs-text: 0.9rem;

  --spacing-l: 3rem;
  --spacing-xm: 2.5rem;
  --spacing-m: 1.5rem;
  --spacing-sm: 1rem;
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: "Lexend Deca";
  src: url("../assets/fonts/Lexend_Deca/LexendDeca-VariableFont_wght.ttf");
  font-display: swap;
  font-style: normal;
  font-weight: 400;
}

@font-face {
  font-family: "Big Shoulders";
  src: url("../assets/fonts/Big_Shoulders/BigShoulders-VariableFont_opsz\,wght.ttf");
  font-display: swap;
  font-style: normal;
  font-weight: 700;
}

img {
  display: block;
  height: auto;
  max-width: 100%;
}

body {
  background-color: var(--neutral-100);
  display: grid;
  place-items: center;
  min-height: 100dvh;
}

